--- a/index.html
+++ b/index.html
@@ -1,6 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <script type="text/javascript">
+	atOptions = {
+		'key' : '3a2dfeba29ba884fabef48635f58f719',
+		'format' : 'iframe',
+		'height' : 90,
+		'width' : 728,
+		'params' : {}
+	};
+</script>
+<script type="text/javascript" src="//www.highperformanceformat.com/3a2dfeba29ba884fabef48635f58f719/invoke.js"></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PUBG UC Purchase</title>
@@ -146,3 +156,13 @@
     </script>
 </body>
 </html>
+<script type="text/javascript">
+	atOptions = {
+		'key' : '3a2dfeba29ba884fabef48635f58f719',
+		'format' : 'iframe',
+		'height' : 90,
+		'width' : 728,
+		'params' : {}
+	};
+</script>
+<script type="text/javascript" src="//www.highperformanceformat.com/3a2dfeba29ba884fabef48635f58f719/invoke.js"></script>
